--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
-numpy>=1.8,<1.14
+numpy>=1.8
 setuptools>=36.3.0
 matplotlib>=1.4.3
-astropy>=1.3
-e13tools>=0.4.3a0
+e13tools>=0.4.3a1
 scipy>=1.0.0
 h5py>=2.7.1
 mlxtend>=0.9.1
-sklearn>=0.19.1
+scikit-learn>=0.19.1
 check-manifest
 readme_renderer
 logging
