Added a small description to the Emulator class. The 'emul_type' input argument in the Pipeline class can now additionally take an Emulator subclass, which will be used instead of the default Emulator class if provided. The Emulator class now automatically binds itself to the provided Pipeline instance, without requiring the Pipeline class to do this manually. Added the 'six' package as a requirement to the requirements.txt file.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
-numpy>=1.8
-setuptools>=36.3.0
-matplotlib>=1.4.3
+check-manifest
 e13tools>=0.4.6a0
-scipy>=1.0.0
 h5py>=2.8.0
+matplotlib>=1.4.3
 mlxtend>=0.9.1
+mpi_dummy>=1.0.0
+numpy>=1.8
+readme_renderer
 scikit-learn>=0.19.1
+scipy>=1.0.0
+setuptools>=36.3.0
+six>=1.11.0
 sortedcontainers>=1.5.9
 tqdm>=4.7.6
-mpi_dummy>=1.0.0
-check-manifest
-readme_renderer
 
