--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,6 @@
 include LICENSE
 include README.rst
-include requirements.txt
+include requirements*.txt
 include prism/data/*
 include prism/tests/*
 
