--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -67,7 +67,7 @@ build: false
 
 test_script:
   # Run the project tests
-  - "%CMD_IN_ENV% check-manifest --ignore .travis.yml,appveyor.cmd,.appveyor.yml,.coveragerc"
+  - "%CMD_IN_ENV% check-manifest --ignore .travis.yml,appveyor.cmd,.appveyor.yml,.coveragerc,prism_trash*,docs*,test_scripts*"
   - "%CMD_IN_ENV% python setup.py check -m -r -s"
   - "%CMD_IN_ENV% python setup.py install"
   - "%CMD_IN_ENV% py.test prism --pep8 prism"
