Added last missing files to the MANIFEST.in file. Updated the requirements.txt file to include the newest e13Tools version.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,4 +2,6 @@ include LICENSE
 include README.rst
 include requirements*.txt
 recursive-include prism *.txt
+include prism/tests/*
+include prism/modellink/tests/*
 
