Hopefully really all files are included in the MANIFEST.in file now. Removed one pytest that was Python version dependent.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,6 +2,6 @@ include LICENSE
 include README.rst
 include requirements*.txt
 recursive-include prism *.txt
-include prism/tests/*
-include prism/modellink/tests/*
+recursive-include prism/tests *
+recursive-include prism/modellink/tests *
 
