--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,7 @@ mpi_dummy>=1.0.0
 numpy>=1.8
 scikit-learn>=0.19.1
 scipy>=1.0.0
-setuptools>=36.3.0
-six
+six>=1.10
 sortedcontainers>=1.5.9
 tqdm>=4.7.6
 
