Coverage of the PRISM code is now at 86%. Completed coverage of the ModelLink class and its pre-written subclasses. Moved all the settings in the .coveragerc file to the setup.cfg file. Fixed a bug in the Pipeline class where if one used more than n_sam_init samples in ext_real_set, the data would not be distributed properly. Added an extra check to the _check_subinstance()-method of the ModelLink class to see if the call_model()-method has been correctly overridden.

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ script:
   - check-manifest --ignore appveyor.cmd,.appveyor.yml,.coveragerc,prism_trash*,docs*,test_scripts*
   - python setup.py check -m -r -s
   - python setup.py install
-  - py.test prism --mpl --pep8 prism -v --cov prism --cov-report term-missing
+  - py.test prism
 after_success:
   - coveralls
 notifications:
