--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -70,4 +70,4 @@ test_script:
   - "%CMD_IN_ENV% check-manifest --ignore .travis.yml,appveyor.cmd,.appveyor.yml,.coveragerc,prism_trash*,docs*,test_scripts*"
   - "%CMD_IN_ENV% python setup.py check -m -r -s"
   - "%CMD_IN_ENV% python setup.py install"
-  - "%CMD_IN_ENV% py.test prism --mpl --pep8 prism"
+  - "%CMD_IN_ENV% py.test prism"
