--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,15 @@
 [bdist_wheel]
 universal=1
+
+[tool:pytest]
+addopts = --mpl --pep8 -v --cov --cov-config=setup.cfg --cov-report term-missing
+
+[coverage:run]
+source = prism
+omit =
+  prism/__init__*
+  prism/*/__init__*
+  prism/tests/*
+  prism/*/tests/*
+  prism/__version__*
+
