--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,16 @@
 language: python
+dist: xenial
+sudo: true
 matrix:
   include:
     - python: 2.7
-      dist: xenial
-      sudo: true
-    - python: 3.4
-      dist: trusty
-      sudo: true
     - python: 3.5
-      dist: xenial
-      sudo: true
     - python: 3.5-dev
-      dist: xenial
-      sudo: true
     - python: 3.6
-      dist: xenial
-      sudo: true
     - python: 3.6-dev
-      dist: xenial
-      sudo: true
     - python: 3.7
-      dist: xenial
-      sudo: true
+    - python: 3.7-dev
+    - python: 3.8-dev
 install:
   - pip install -r requirements_dev.txt
 script:
