--- a/docs/Makefile
+++ b/docs/Makefile
@@ -14,7 +14,16 @@ help:
 
 .PHONY: help Makefile
 
+.PHONY: generate-api
+generate-api: source/apidoc.sh
+	bash $<
+
+.PHONY: clean
+clean:
+	rm -rf $(BUILDDIR)/*
+
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
-%: Makefile
+.PHONY: html
+html: clean generate-api
 	@$(SPHINXBUILD) -M $@ "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
