Changed the GaussianLink class to allow the user to specify the number of Gaussians that the model will use. The default colormaps are now saved as .npy-files. Optimized the rainforest colormap. Changed the import_cmaps()-function to allow for .npy-files to be imported.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,6 +2,7 @@ include LICENSE
 include README.rst
 include requirements*.txt
 recursive-include prism *.txt
+recursive-include prism/data *
 recursive-include prism/tests *
 recursive-include prism/modellink/tests *
 
