--- a/docs/Makefile
+++ b/docs/Makefile
@@ -21,6 +21,7 @@ generate-api: source/apidoc.sh
 .PHONY: clean
 clean:
 	rm -rf $(BUILDDIR)/*
+	rm -rf $(SOURCEDIR)/api/*
 
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
