Improved a few error messages. Improved the way the active parameters are redetermined, which also fixed a bug. Added a missing raise_error. Fixed a bug where relative paths cannot be determined if the paths are on different drives. Fixed a bug in the pytests where an invalid data space was not always detected (due to the fact that data points are now read into a dict and not follow the same order anymore). Added a few static RNG seeds to some pytests to make their results consistent.

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -63,3 +63,6 @@ test_script:
   - "%CMD_IN_ENV% python setup.py check -m -r -s"
   - "%CMD_IN_ENV% python setup.py install"
   - "%CMD_IN_ENV% py.test prism"
+
+on_success:
+  - "%CMD_IN_ENV" coveralls
