Renamed the pipeline, projection and emulator modules to _pipeline, _projection and _emulator. Made tons of changes to docstrings to reflect these changes. Rewritten the entire API part of the docs.

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -14,17 +14,12 @@ help:
 
 .PHONY: help Makefile
 
-.PHONY: generate-api
-generate-api: source/apidoc.sh
-	bash $<
-
 .PHONY: clean
 clean:
 	rm -rf $(BUILDDIR)/*
-	rm -rf $(SOURCEDIR)/api/*
 
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
 .PHONY: html
-html: clean generate-api
+html: clean
 	@$(SPHINXBUILD) -M $@ "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
