Updated to version 0.5.8. Introduced the 'n_cross_val' emulator parameter, which gives the number of cross-validations that are to be used for determining the quality of the regression fits. Added pytest for the new parameter. Travis CI and AppVeyor now automatically check if PRISM can be successfully packaged. Added the raise_warning()-function and the RequestWarning warning, which work similarly to their error counterparts. Changed all processing of PRISM parameters to use the convert_str_seq()-function instead of assuming the type of the provided value. Added a warning when the number of plausible samples after an emulator analysis is less than n_sam_init.

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,8 @@ install:
   - pip install -r requirements_dev.txt
 script:
   - check-manifest --ignore appveyor.cmd,.appveyor.yml,.coveragerc,prism_trash*,docs*,test_scripts*
-  - python setup.py check -m -r -s
+  - python setup.py sdist bdist_wheel
+  - twine check dist/*
   - pip install .
   - py.test prism
 after_success:
