--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,8 @@ universal=1
 
 [tool:pytest]
 addopts = --mpl --pep8 -v --cov --cov-config=setup.cfg --cov-report term-missing
+filterwarnings = 
+  ignore::prism._internal.RequestWarning
 
 [coverage:run]
 source = prism
