--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -62,7 +62,7 @@ test_script:
   - "%CMD_IN_ENV% check-manifest --ignore .travis.yml,appveyor.cmd,.appveyor.yml,.coveragerc,prism_trash*,docs*,test_scripts*"
   - "%CMD_IN_ENV% python setup.py sdist bdist_wheel"
   - "%CMD_IN_ENV% twine check dist/*"
-  - "%CMD_IN_ENV% pip install ."
+  - "%CMD_IN_ENV% pip install -e ."
   - "%CMD_IN_ENV% py.test prism"
 
 on_success:
