--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ script:
   - check-manifest --ignore appveyor.cmd,.appveyor.yml,.coveragerc,prism_trash*,docs*,test_scripts*
   - python setup.py sdist bdist_wheel
   - twine check dist/*
-  - pip install .
+  - pip install -e .
   - py.test prism
 after_success:
   - coveralls
