--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -59,7 +59,7 @@ build: false
 
 test_script:
   # Run the project tests
-  - "%CMD_IN_ENV% check-manifest --ignore .travis.yml,appveyor.cmd,.appveyor.yml,.coveragerc,prism_trash*,docs*,test_scripts*"
+  - "%CMD_IN_ENV% check-manifest --ignore .travis.yml,appveyor.cmd,.appveyor.yml,.codecov.yml,prism_trash*,docs*,test_scripts*"
   - "%CMD_IN_ENV% python setup.py sdist bdist_wheel"
   - "%CMD_IN_ENV% twine check dist/*"
   - "%CMD_IN_ENV% pip install -e ."
