Enforce that only the master branch ever gets covered.

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,7 @@ script:
   - twine check dist/*
   - pip install -e .
   - py.test prism
+after_success:
+  - codecov -t 6a194e41-c88d-4b7e-af10-29d9f54f8d84
 notifications:
   email: false
