--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 universal=1
 
 [tool:pytest]
-addopts = --mpl --pep8 -v --cov --cov-config=setup.cfg --cov-report term-missing
+addopts = --mpl --pep8 -v
 filterwarnings = 
   ignore::prism._internal.RequestWarning
 
