--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,18 @@ matrix:
     - python: 3.7-dev
 install:
   - pip install -r requirements_dev.txt
+  - export OMP_NUM_THREADS=1
 script:
-  - check-manifest --ignore appveyor.cmd,.appveyor.yml,.codecov.yml,prism_trash*,docs*,test_scripts*
+  - check-manifest --ignore appveyor.cmd,.appveyor.yml,.codecov.yml,prism_trash*,docs*,joss_paper*
   - python setup.py sdist bdist_wheel
   - twine check dist/*
   - pip install -e .
-  - py.test prism
+  - coverage run --rcfile=setup.cfg -p -m py.test prism
+  - sudo apt-get install -y -q openmpi-bin libopenmpi-dev
+  - mpiexec -n 2 coverage run --rcfile=setup.cfg -p -m mpi4py -m py.test prism
+after_script:
+  - coverage combine
+  - coverage report -m
 after_success:
   - codecov -t 6a194e41-c88d-4b7e-af10-29d9f54f8d84
 notifications:
