--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ script:
   - pip install -e .
   - coverage run --rcfile=setup.cfg -p -m py.test prism
   - sudo apt-get install -y -q openmpi-bin libopenmpi-dev
+  - pip --no-cache install mpi4py
   - mpiexec -n 2 coverage run --rcfile=setup.cfg -p -m mpi4py -m py.test prism
 after_script:
   - coverage combine
