Hopefully pytests in MPI will work now.

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,12 +2,13 @@
 universal=1
 
 [tool:pytest]
-addopts = --mpl --pep8 -v
+addopts = --mpl --pep8 -v --import-mode=prepend --cache-clear
+testpaths = ./prism
 filterwarnings = 
   ignore::prism._internal.RequestWarning
 
 [coverage:run]
-source = prism
+parallel = true
 omit =
   prism/__init__*
   prism/*/__init__*
