--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,19 @@ sudo: true
 matrix:
   include:
     - python: 2.7
+      env: RUN_COVERAGE=0
     - python: 3.5
+      env: RUN_COVERAGE=1
     - python: 3.5-dev
+      env: RUN_COVERAGE=0
     - python: 3.6
+      env: RUN_COVERAGE=0
     - python: 3.6-dev
+      env: RUN_COVERAGE=0
     - python: 3.7
+      env: RUN_COVERAGE=0
     - python: 3.7-dev
+      env: RUN_COVERAGE=0
 install:
   - pip install -r requirements_dev.txt
   - export OMP_NUM_THREADS=1
@@ -18,14 +25,23 @@ script:
   - python setup.py sdist bdist_wheel
   - twine check dist/*
   - pip install -e .
-  - coverage run --rcfile=setup.cfg -p -m py.test prism
-  - sudo apt-get install -y -q openmpi-bin libopenmpi-dev
-  - pip --no-cache install mpi4py
-  - mpiexec -n 2 coverage run --rcfile=setup.cfg -p -m mpi4py -m py.test prism
+  - if [ -n "$RUN_COVERAGE" ]; then
+  	coverage run --rcfile=setup.cfg -p -m pytest prism
+  	sudo apt-get install -y -q openmpi-bin libopenmpi-dev
+  	pip --no-cache install mpi4py
+  	mpiexec -n 2 coverage run --rcfile=setup.cfg -p -m mpi4py -m pytest prism
+    else
+    	pytest prism
+    	mpiexec -n 2 pytest prism
+    fi
 after_script:
-  - coverage combine
-  - coverage report -m
+  - if [ -n "$RUN_COVERAGE" ]; then
+  	coverage combine
+  	coverage report -m
+    fi
 after_success:
-  - codecov -t 6a194e41-c88d-4b7e-af10-29d9f54f8d84
+  - if [ -n "$RUN_COVERAGE" ]; then
+  	codecov -t 6a194e41-c88d-4b7e-af10-29d9f54f8d84
+    fi
 notifications:
   email: false
