More structure fixes for conditional commands.

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ script:
   - twine check dist/*
   - pip install -e .
   - |
-    if [ -n "$RUN_COVERAGE" ]; then
+    if [[ "$RUN_COVERAGE" == "1" ]]; then
   	coverage run --rcfile=setup.cfg -p -m pytest prism
   	sudo apt-get install -y -q openmpi-bin libopenmpi-dev
   	pip --no-cache install mpi4py
@@ -37,11 +37,11 @@ script:
     fi
 after_script:
   - |
-    if [ -n "$RUN_COVERAGE" ]; then
+    if [[ "$RUN_COVERAGE" == "1" ]]; then
   	coverage combine
   	coverage report -m
     fi
 after_success:
-  - if [ -n "$RUN_COVERAGE" ]; then codecov -t 6a194e41-c88d-4b7e-af10-29d9f54f8d84; fi
+  - if [[ "$RUN_COVERAGE" == "1" ]]; then codecov -t 6a194e41-c88d-4b7e-af10-29d9f54f8d84; fi
 notifications:
   email: false
