Removed coverage tests for AppVeyor.

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -63,6 +63,4 @@ test_script:
   - "%CMD_IN_ENV% python setup.py sdist bdist_wheel"
   - "%CMD_IN_ENV% twine check dist/*"
   - "%CMD_IN_ENV% pip install -e ."
-  - "%CMD_IN_ENV% coverage run --rcfile=setup.cfg -p -m py.test prism"
-  - "%CMD_IN_ENV% coverage combine"
-  - "%CMD_IN_ENV% coverage report -m"
+  - "%CMD_IN_ENV% pytest prism"
