--- a/setup.cfg
+++ b/setup.cfg
@@ -2,13 +2,14 @@
 universal=1
 
 [tool:pytest]
-addopts = --mpl --pep8 -v --import-mode=prepend --cache-clear
+addopts = --mpl --pep8 -v
 testpaths = ./prism
 filterwarnings = 
   ignore::prism._internal.RequestWarning
 
 [coverage:run]
 parallel = true
+source = ./prism
 omit =
   prism/__init__*
   prism/*/__init__*
