Added docs about MPI scaling and projections. Made a few modifications to the project()-method to more easily take only 2 positional arguments. Fixed a bug where only having a single active parameter for the projection figures would cause an error when determining what 3D projections can be made (which should be none). The _set_model_parameters() and _set_model_data() methods of the ModelLink class are now private methods (double leading underscore). The emul_type argument for the Pipeline class no longer takes a string as a valid input. Instead, it now takes either None or an Emulator subclass.

--- a/.codecov.yml
+++ b/.codecov.yml
@@ -1,19 +1,19 @@
 codecov:
-  token: 6a194e41-c88d-4b7e-af10-29d9f54f8d84
-  ci:
-    - !appveyor
-  notify:
-    require_ci_to_pass: yes
-  strict_yaml_branch: master
+    token: 6a194e41-c88d-4b7e-af10-29d9f54f8d84
+    ci:
+        - !appveyor
+    notify:
+        require_ci_to_pass: yes
+    strict_yaml_branch: master
   
 
 coverage:
-  range: 0..100
-  round: down
-  precision: 2
-  status:
-    project:
-      default:
-      	target: 95%
-
+    range: 0..100
+    round: down
+    precision: 2
+    status:
+        project:
+            default:
+              	target: 95%
+        patch: false
 comment: off
