Rewritten the README.rst file to include more information. Rewritten the introduction of the docs for the same reason. Added community guidelines. Updated the MANIFEST.in file to exclude specific patterns. Included a check in PRISM's __init__.py file, to see if mpi4py >= 3.0.0 is used in case MPI is used. Added NumPy citation to the JOSS paper.

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ matrix:
 install:
   - pip install -r requirements_dev.txt
 script:
-  - check-manifest --ignore appveyor.cmd,.appveyor.yml,.codecov.yml,prism_trash*,docs*,joss_paper*
+  - check-manifest
   - python setup.py sdist bdist_wheel
   - twine check dist/*
   - pip install -e .
