--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,8 +2,7 @@ include LICENSE
 include README.rst
 include MANIFEST.in
 include requirements*.txt
-recursive-include prism *.txt
-recursive-include prism/* data *
+recursive-include prism data/*
 
 exclude docs joss_paper prism_trash .github
 recursive-exclude docs *
