Fixed a bug where PRISM could crash if used on 32-bit Windows machines. Removed CodeCov token, as it is no longer necessary. Added automated PyPI deployment from Travis.

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -64,4 +64,4 @@ test_script:
   - "%CMD_IN_ENV% twine check dist/*"
   - "%CMD_IN_ENV% pip install -e ."
   - "%CMD_IN_ENV% python -c \"import prism; prism.get_info()\""
-  - "%CMD_IN_ENV% pytest prism"
+  - "%CMD_IN_ENV% pytest"
