Added Travis tests back in, now that deployment works. Set 'universal' to zero to make sure that wheels for py2 and py3 are uploaded separately.

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,22 @@ script:
   - twine check dist/*
   - pip install -e .
   - python -c "import prism; prism.get_info()"
+  - |
+    if [[ "$RUN_COVERAGE" == "1" ]]; then
+      coverage run --rcfile=setup.cfg -m pytest
+    else
+      pytest
+    fi
+  - sudo apt-get install -y -q openmpi-bin libopenmpi-dev
+  - pip --no-cache install mpi4py
+  - |
+    if [[ "$RUN_COVERAGE" == "1" ]]; then
+      mpiexec -n 2 coverage run --rcfile=setup.cfg -m mpi4py -m pytest
+      coverage combine
+      coverage report -m
+    else
+      mpiexec -n 2 pytest
+    fi
 after_success:
   - |
     if [[ "$RUN_COVERAGE" == "1" ]]; then
