--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ h5py>=2.8.0
 future>=0.17.0
 matplotlib>=1.4.3
 mlxtend>=0.9.1
-numpy>=1.12.0;python_version>"3"
+numpy>=1.12.0;python_version>="3"
 numpy>=1.12.0,<1.16.0;python_version=="2.7.*"
 scikit-learn>=0.19.1
 scipy>=1.0.0
