Removed quotation marks in deploy condition.

--- a/.travis.yml
+++ b/.travis.yml
@@ -89,7 +89,7 @@ deploy:
     skip_existing: true
     on:
         branch: master
-        condition: "$TRAVIS_OS_NAME" == "linux"
+        condition: $TRAVIS_OS_NAME == linux
     
 notifications:
   email: false
