Small update to the .appveyor.yml file.

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,67 +1,62 @@
 environment:
-  global:
-    CMD_IN_ENV: "cmd /E:ON /V:ON /C .\\appveyor.cmd"
+    global:
+        CMD_IN_ENV: "cmd /E:ON /V:ON /C .\\appveyor.cmd"
 
-  matrix:
-    - PYTHON: "C:\\Python27"
-      PYTHON_VERSION: "2.7.x"
-      PYTHON_ARCH: "32"
+    matrix:
+        - PYTHON: "C:\\Python27"
+          PYTHON_VERSION: "2.7.x"
+          PYTHON_ARCH: "32"
 
-    - PYTHON: "C:\\Python27-x64"
-      PYTHON_VERSION: "2.7.x"
-      PYTHON_ARCH: "64"
+        - PYTHON: "C:\\Python27-x64"
+          PYTHON_VERSION: "2.7.x"
+          PYTHON_ARCH: "64"
 
-    - PYTHON: "C:\\Python35"
-      PYTHON_VERSION: "3.5.x"
-      PYTHON_ARCH: "32"
+        - PYTHON: "C:\\Python35"
+          PYTHON_VERSION: "3.5.x"
+          PYTHON_ARCH: "32"
 
-    - PYTHON: "C:\\Python35-x64"
-      PYTHON_VERSION: "3.5.x"
-      PYTHON_ARCH: "64"
+        - PYTHON: "C:\\Python35-x64"
+          PYTHON_VERSION: "3.5.x"
+          PYTHON_ARCH: "64"
 
-    - PYTHON: "C:\\Python36"
-      PYTHON_VERSION: "3.6.x"
-      PYTHON_ARCH: "32"
+        - PYTHON: "C:\\Python36"
+          PYTHON_VERSION: "3.6.x"
+          PYTHON_ARCH: "32"
 
-    - PYTHON: "C:\\Python36-x64"
-      PYTHON_VERSION: "3.6.x"
-      PYTHON_ARCH: "64"
+        - PYTHON: "C:\\Python36-x64"
+          PYTHON_VERSION: "3.6.x"
+          PYTHON_ARCH: "64"
 
-    - PYTHON: "C:\\Python37"
-      PYTHON_VERSION: "3.7.x"
-      PYTHON_ARCH: "32"
+        - PYTHON: "C:\\Python37"
+          PYTHON_VERSION: "3.7.x"
+          PYTHON_ARCH: "32"
 
-    - PYTHON: "C:\\Python37-x64"
-      PYTHON_VERSION: "3.7.x"
-      PYTHON_ARCH: "64"
+        - PYTHON: "C:\\Python37-x64"
+          PYTHON_VERSION: "3.7.x"
+          PYTHON_ARCH: "64"
+
+branches:
+    only:
+        - master
 
 install:
-  # Prepend newly installed Python to the PATH of this build (this cannot be
-  # done from inside the powershell script as it would require to restart
-  # the parent CMD process).
-  - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
+    # Prepend newly installed Python to the PATH of this build (this cannot be
+    # done from inside the powershell script as it would require to restart
+    # the parent CMD process).
+    - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
 
-  # Check that we have the expected version and architecture for Python
-  - "python --version"
-  - "python -c \"import struct; print(struct.calcsize('P') * 8)\""
+    # Upgrade pip
+    - "python -m pip install --disable-pip-version-check --user --upgrade pip"
 
-  # Upgrade to the latest version of pip to avoid it displaying warnings
-  # about it being out of date.
-  - "python -m pip install --disable-pip-version-check --user --upgrade pip"
-
-  # Install the build dependencies of the project. If some dependencies contain
-  # compiled extensions and are not provided as pre-built wheel packages,
-  # pip will build them from source using the MSVC compiler matching the
-  # target Python version and architecture
-  - "%CMD_IN_ENV% pip install -r requirements_dev.txt"
+    # Install PRISM
+    - "pip install -r requirements_dev.txt"
+    - "check-manifest"
+    - "python setup.py sdist bdist_wheel"
+    - "twine check dist/*"
+    - "pip install -e ."
+    - "python -c \"import prism; prism.get_info()\""
 
 build: false
 
 test_script:
-  # Run the project tests
-  - "%CMD_IN_ENV% check-manifest"
-  - "%CMD_IN_ENV% python setup.py sdist bdist_wheel"
-  - "%CMD_IN_ENV% twine check dist/*"
-  - "%CMD_IN_ENV% pip install -e ."
-  - "%CMD_IN_ENV% python -c \"import prism; prism.get_info()\""
-  - "%CMD_IN_ENV% pytest"
+    - "pytest"
