--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,7 @@ before_install:
           brew cask uninstall oclint
           brew upgrade python
       fi
+    - python -m pip install --upgrade pip==18.1
     - python -m pip install -r requirements_dev.txt
 install:
     - check-manifest
