--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ matrix:
     include:
         - os: osx
           language: generic
-          env: RUN_COVERAGE=0
+          env: RUN_COVERAGE=0 PY=3
           python: 3
         - python: 3.5
           env: RUN_COVERAGE=1
@@ -35,14 +35,14 @@ before_install:
           brew cask uninstall oclint
           brew upgrade python
       fi
-    - python -m pip install --upgrade pip==18.1
-    - python -m pip install -r requirements_dev.txt
+    - python$PY -m pip install --upgrade pip==18.1
+    - python$PY -m pip install -r requirements_dev.txt
 install:
     - check-manifest
-    - python setup.py sdist bdist_wheel
+    - python$PY setup.py sdist bdist_wheel
     - twine check dist/*
-    - python -m pip install -e .
-    - python -c "import prism; prism.get_info()"
+    - python$PY -m pip install -e .
+    - python$PY -c "import prism; prism.get_info()"
 script:
     - |
       if [[ "$RUN_COVERAGE" == "1" ]]; then
@@ -56,7 +56,7 @@ script:
       else
           brew install openmpi
       fi
-    - python -m pip --no-cache-dir install mpi4py
+    - python$PY -m pip --no-cache-dir install mpi4py
     - |
       if [[ "$RUN_COVERAGE" == "1" ]]; then
           mpiexec -n 2 coverage run --rcfile=setup.cfg -m mpi4py -m pytest
