--- a/.codecov.yml
+++ b/.codecov.yml
@@ -3,7 +3,7 @@ codecov:
         - !appveyor
     notify:
         require_ci_to_pass: yes
-    strict_yaml_branch: master
+    strict_yaml_branch: v1.0.x
   
 
 coverage:
