--- a/.travis.yml
+++ b/.travis.yml
@@ -43,6 +43,7 @@ before_install:
               brew upgrade python
           fi
       fi
+    - python$PY -m pip install --upgrade pip==18.1
     - python$PY -m pip install -r requirements_dev.txt
 install:
     - check-manifest
@@ -88,7 +89,7 @@ deploy:
     distributions: "sdist bdist_wheel"
     skip_existing: true
     on:
-        branch: master
+        branch: 1.0.x
         condition: $TRAVIS_OS_NAME == linux
     
 notifications:
