Mention in the docs that this branch of PRISM will not be maintained.

--- a/.travis.yml
+++ b/.travis.yml
@@ -89,7 +89,7 @@ deploy:
     distributions: "sdist bdist_wheel"
     skip_existing: true
     on:
-        branch: 1.0.x
+        branch: v1.0.x
         condition: $TRAVIS_OS_NAME == linux
     
 notifications:
