Changed .travis.yml file to make sure that deployments only occur on tagged commits. Made a small change to the convert_str_seq()-function to convert '1e1' to '10.0' instead of '10' (as would also happen in normal Python). The projection figure data is now returned in a SortedDict instead of a normal dict. Removed the future requirement, as it was only necessary for a package that PRISM no longer uses.

--- a/.travis.yml
+++ b/.travis.yml
@@ -79,6 +79,7 @@ deploy:
     on:
         branch: master
         condition: $TRAVIS_OS_NAME == linux
+        tags: true
     
 notifications:
   email: false
