Changed many paths to specifically point to the v1.0.x branch. Ensured that the v1.0.x branch now also only deploys if the commit was tagged.

--- a/.travis.yml
+++ b/.travis.yml
@@ -90,6 +90,7 @@ deploy:
     on:
         branch: v1.0.x
         condition: $TRAVIS_OS_NAME == linux
+        tags: true
     
 notifications:
   email: false
