I might have found the problem with CodeCov not reporting coverage properly.

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ testpaths = ./prism
 
 [coverage:run]
 parallel = true
-source = ./prism
+include = prism/*
 omit =
   prism/tests/*
   prism/*/tests/*
