Back to CodeCov now that I finally figured out what the problem was.

--- a/.travis.yml
+++ b/.travis.yml
@@ -75,7 +75,7 @@ script:
 after_success:
     - |
       if [[ "$RUN_COVERAGE" == "1" ]]; then
-          coveralls
+          codecov
       fi
 before_deploy:
     - rm -r dist
