Added the mpi4pyd requirement to the package. Changed several instances to use the new mpi4pyd package instead of the e13Tools package.

--- a/.travis.yml
+++ b/.travis.yml
@@ -81,4 +81,8 @@ deploy:
         tags: true
     
 notifications:
-  email: false
+  email:
+    recipients:
+      - evandervelden@swin.edu.au
+    on_success: change
+    on_failure: always
