Added missing logo directory to MANIFEST.in.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,9 +4,10 @@ include MANIFEST.in
 include requirements*.txt
 recursive-include prism data/*
 
-exclude docs joss_paper prism_trash .github
+exclude docs joss_paper logo prism_trash .github
 recursive-exclude docs *
 recursive-exclude joss_paper *
+recursive-exclude logo *
 recursive-exclude prism_trash *
 recursive-exclude .github *
 exclude *.yml
