--- a/.travis.yml
+++ b/.travis.yml
@@ -93,4 +93,13 @@ deploy:
         tags: true
     
 notifications:
-  email: false
+  webhooks:
+    urls:
+      - https://webhooks.gitter.im/e/7027496921d111b98149
+    on_success: change
+    on_failure: always
+  email:
+    recipients:
+      - evandervelden@swin.edu.au
+    on_success: change
+    on_failure: always
